--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -23,8 +23,8 @@
         margin-top: 20px;
         height: 70px;
         h4{
-            font-size: 55px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 35px;
+            font-family: 'Poppins', sans-serif;
             text-transform: uppercase;
             font-weight: 500;
             margin-left: 45px;
