--- a/src/Pages/layout/style.scss
+++ b/src/Pages/layout/style.scss
@@ -54,6 +54,7 @@
 
         img {
             width: 120px;
+            height: 120px;
             border-radius: 50%;
             position: absolute;
             border: 4px solid #D9D9D9;
