--- a/src/Pages/layout/style.scss
+++ b/src/Pages/layout/style.scss
@@ -57,7 +57,7 @@
             height: 120px;
             border-radius: 50%;
             position: absolute;
-            border: 4px solid #D9D9D9;
+            border: 4px solid #fff;
         }
 
         img:nth-child(2) {
