--- a/src/Pages/Shop/style.scss
+++ b/src/Pages/Shop/style.scss
@@ -12,3 +12,16 @@
     padding-bottom: 120px;
     
 }
+.shop-top{
+    margin-left: 100px;
+
+    h2{
+        font-size: 60px;
+        font-weight: 500;
+        line-height: 72px;
+        color: #333;
+        width: 889px;
+        text-transform: uppercase;
+
+    }
+}
