--- a/src/Pages/layout/style.scss
+++ b/src/Pages/layout/style.scss
@@ -27,6 +27,7 @@
             font-weight: 500;
             line-height: 72px;
             color: #333;
+            text-transform: uppercase;
         }
 
         &-box {
