--- a/src/Pages/service/style.scss
+++ b/src/Pages/service/style.scss
@@ -35,3 +35,15 @@
     font-weight: 400;
     font-size: 20px;
 }
+.service-top{
+    margin-left: 100px;
+    width: 993 px;
+}
+.service-top h3{
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 72px;
+    color: #333;
+    text-transform: uppercase;
+
+}
