--- a/src/Pages/Burto/style.scss
+++ b/src/Pages/Burto/style.scss
@@ -13,6 +13,8 @@
             font-weight: 700;
             line-height: 72px;
             color: #333;
+            width: 889px;
+            text-transform: uppercase;
         }
     }
     &-imagebar{
