--- a/src/components/slider/style.scss
+++ b/src/components/slider/style.scss
@@ -1,6 +1,6 @@
 .slick-list{
     
-    width: 95% !important;
+    width: 92% !important;
     height: 60px;
     display: flex !important;
     flex-direction: column;
@@ -29,7 +29,8 @@
     
 }
 .slider-card{
-    width: 100% !important;
+    width: 99% !important;
+    margin: 0 auto  ;
     background: #0567FA;
 
     
