--- a/src/components/slider/style.scss
+++ b/src/components/slider/style.scss
@@ -29,10 +29,13 @@
     
 }
 .slider-card{
-    width: 99% !important;
+    width: 1540px !important;
     margin: 0 auto  ;
     background: #0567FA;
 
     
+}
+.slick-arrow{
+    display: none !important;
 }
 
