--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body{
 
 
 .container{
-    width: 1510px !important;
+    width: 98% !important;
     margin: 0 auto;
     padding: 0px 40px;
 
@@ -71,3 +71,23 @@ body{
     font-size: 50px;
     font-weight: 500;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
