--- a/src/Pages/Shop/style.scss
+++ b/src/Pages/Shop/style.scss
@@ -5,7 +5,7 @@
    
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between ;
+    justify-content: space-around;;
     gap: 20px;
 }
 .shop{
@@ -25,3 +25,9 @@
 
     }
 }
+.shop_batafsil-box{
+    width: 100%;
+    display: flex;
+    justify-self: center;
+}
+  
