--- a/src/components/card/style.scss
+++ b/src/components/card/style.scss
@@ -1,11 +1,12 @@
 .props-card{
-    width: 460px;
-    height: 600px;
+    width: 400px;
+    height: 500px;
     margin-top: 40px;
+    position: relative;
     
     &-imgbox{
-        width: 460px;
-        height: 530px;
+        width: 100%;
+        height: 500px;
         
         text-align: center;
         img{
@@ -15,36 +16,26 @@
         }
     }
     &-titlebox{
+        width: 94% !important;
+        height: 60px;
+        border-radius: 116px;
+        position: absolute;
+        bottom: 12px;
+        left: 12px;
+        z-index: 2;
         display: flex;
-        justify-content: space-between ;
+        justify-content: space-between;
+        background: #ccc;
         align-items: center;
-        border-top: 1px solid #ccc;
-        border-bottom: 1px solid #ccc;
-        margin-top: 20px;
-        height: 70px;
+        padding: 0 40px;
         h4{
-            font-size: 35px;
-            font-family: 'Poppins', sans-serif;
+            font-size: 32px;
             text-transform: uppercase;
             font-weight: 500;
-            margin-left: 45px;
         }
-        img{
-            // background: blue;    
-            width: 32px;
-            height: 32px;
-            margin-right: 20px;
-            
-        }
-        cursor: pointer;
+        
+    }:nth-child(1){
+         
     }
-    .tepaga_icon{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 50px;
-        height: 50px;
-        border-right: 1px solid #ccc;
-        margin-left: 40px;
-    }
+    
 }
