--- a/src/components/slider/style.scss
+++ b/src/components/slider/style.scss
@@ -29,7 +29,7 @@
     
 }
 .slider-card{
-    width: 96% !important;
+    width: 96% ;
     border-radius: 18px;
     margin: 0 auto  ;
     background: #0567FA;
