--- a/src/Pages/Shop/style.scss
+++ b/src/Pages/Shop/style.scss
@@ -5,7 +5,7 @@
    
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;;
+    justify-content: space-between;;
     gap: 20px;
 }
 .shop{
