--- a/src/media.scss
+++ b/src/media.scss
@@ -179,7 +179,7 @@
   }
 
   .props-card{
-    width: 400px !important;
+    width:80% !important;
   }
   .contact-left-top{
     h3{
@@ -407,7 +407,7 @@
     
     }
     .cart_body{
-        border: none;
+        border: none !important;
         p{
             padding: 0 !important;
         }
