container min width 1340 px

--- a/src/media.scss
+++ b/src/media.scss
@@ -1,3 +1,8 @@
+@media (min-width:1300px){
+    .container{
+        width: 1480px !important;
+    }
+}
 
 @media(max-width:1240px){
     .container{
