--- a/src/Pages/service/style.scss
+++ b/src/Pages/service/style.scss
@@ -37,9 +37,9 @@
 }
 .service-top{
     margin-left: 100px;
-    width: 993px;
+    margin-right: 100px;
 }
-.service-top h3{
+.servis-titl{
     font-size: 60px;
     font-weight: 500;
     line-height: 72px;
